# aiworkforme

./: .env.example  .gitignore  BUILD_PHASE_MILESTONE_PLAN.md  Build-plan-guideline.md  Dockerfile  MASTERPLAN.MD  NEXT-STEP-FEB-16.md  PROTOTYPE_EXTRACTION_MATRIX.md  WORKING_INBOUND_WORKFLOW.MD  aiworkforme-v2-ui.md  docker-compose.yml  page_summary.txt  railway.json  refactor_crm.py  start.sh  temp-e2e.spec.js  test_agents_api.py  test_api.py  test_baileys.py  test_playground_flow.py  test_voice.py  uniapi-gemini-api-documentation.md  work-report-mar-11-2026-aiworkforme.md  work-report-mar-12-2026-aiworkforme.md  work-report-mar-16-2026-aiworkforme.md  work-report-mar-17-2026-aiworkforme.md  work-report-mar-18-2026-aiworkforme.md  work-report-mar-19-2026-aiworkforme.md  work-report-mar-21-2026-aiworkforme.md  work-report-mar-30-2026-aiworkforme.md  work-report-mar-31-2026-aiworkforme.md
backend/: Dockerfile  audit.py  check_channels.py  check_channels_sql.py  check_db.py  check_llm.py  database.py  dependencies.py  fix.py  force_seed.py  inspect_schema.py  main.py  mcp_manager.py  models.py  pyproject.toml  requirements.txt  security.py  test_billing_scenario.py  test_db_calendar.py  test_full_scenario.py  test_mcp_validation.py  verify_flow.py  zai_client.py
backend/mcp-runtime-scripts/: calendar_mcp.py  catalog_setup_workflow.md  catalog_skill.md  knowledge_retrieval.py
backend/mcp_servers/: billing_mcp.py  calendar_mcp.py  catalog_mcp.py  knowledge_retrieval.py  voice_note_followup.py
backend/policy/: evaluator.py
backend/routers/: README.md  __init__.py  (+39 more)
(+313 files in other folders)
